--- a/secciones/pigGame.html
+++ b/secciones/pigGame.html
@@ -7,27 +7,15 @@
       src="https://kit.fontawesome.com/15199fa674.js"
       crossorigin="anonymous"
     ></script>
-    <title>Adivina el Numero</title>
+    <title>Pig Game</title>
     <link rel="stylesheet" href="../css/style.css" />
   </head>
 
   <body>
     <header class="header-pages">
       <div class="header-nombre-portfolio">
-        <a href="../index.html">
-          <p>Daniel Vergaray</p>
-        </a>
+        <a href="../index.html"><p>Daniel Vergaray</p></a>
       </div>
-
-      <!-- <div class="header-info-portfolio">
-        <ul>
-          <li>Sobre mi</li>
-          <li><a href="#estudiosId">Estudios</a></li>
-          <li><a href="#estudiosId">Idiomas</a></li>
-          <li><a href="#portfolioId">Portfolio</a></li>
-          <li><a href="#contactoId">Contacto</a></li>
-        </ul>
-      </div> -->
 
       <div class="header-iconoRegresar-container">
         <a href="../index.html"><i class="fa-solid fa-house"></i></a>
@@ -35,23 +23,26 @@
     </header>
     <section class="todo-el-contenido">
       <section class="portfolio-container-paginas">
-        <h3>Juego: Adivina el Numero</h3>
+        <h3>Pig Game</h3>
         <div class="proyectos-descripcion">
           <p>
-            Este proyecto consiste en un juego donde se genera un numero al azar
-            y el usuario debe adivinarlo, contando con pistas que se muestran de
-            acuerdo al valor introducido por el usuario. Fue realizado usando
-            javaScript.
+            Este proyecto consiste en un juego donde se le permite al usuario
+            lanzar el dado y sumar los numeros obtenidos de manera aleatoria
+            hasta llegar al objetivo. Fue realizado usando javaScript.
           </p>
           <div>
-            <img src="../imagenes/desktop/adivina.jpeg" alt="web-mr-snack" />
+            <img
+              class="img-rectangular"
+              src="../imagenes/desktop/pigGame.jpg"
+              alt="web-mr-snack"
+            />
           </div>
         </div>
         <div class="btn-visitar-sitio">
-          <a href="https://danielvergaray.github.io/AdivinaElNumero_juego/"
+          <a href="https://danielvergaray.github.io/pig-game/"
             ><button>Visitar sitio</button>
           </a>
-          <a href="https://github.com/danielvergaray/AdivinaElNumero_juego"
+          <a href="https://github.com/danielvergaray/pig-game"
             ><button>Ver repositorio</button>
           </a>
           <a class="btn-regresar" href="../index.html"
