--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
           <div class="carousel-item active">
             <div class="cards-container">
               <div class="card">
-                <img src="/imagenes/desktop/adivinaElNumero.jpeg" class="card-img-top" alt="...">
+                <img src="./imagenes/desktop/adivinaElNumero.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Juego: Adivina el número</h5>
                   <p class="card-text">HTML5, CSS3, javaScript</p>
@@ -176,7 +176,7 @@
                 </div>
               </div>
               <div class="card">
-                <img src="/imagenes/desktop/ecommerce.jpeg" class="card-img-top" alt="...">
+                <img src="./imagenes/desktop/ecommerce.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Ecommerce Mr. Snack</h5>
                   <p class="card-text">HTML5, CSS3, javaScript</p>
@@ -184,11 +184,11 @@
                 </div>
               </div>
               <div class="card">
-                <img src="/imagenes/desktop/pigGame.jpg" class="card-img-top" alt="...">
+                <img src="./imagenes/desktop/pigGame.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Juego: Pig Game</h5>
                   <p class="card-text">HTML5, CSS3, javaScript</p>
-                  <a href="#" class="btn btn-primary">Ver más</a>
+                  <a href="./secciones/pigGame.html" class="btn btn-primary">Ver más</a>
                 </div>
               </div>
             </div>
@@ -196,7 +196,7 @@
           <div class="carousel-item">
             <div class="cards-container">
               <div class="card">
-                <img src="/imagenes/desktop/web-mr-snack.jpeg" class="card-img-top" alt="...">
+                <img src="./imagenes/desktop/web-mr-snack.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Web Mr. Snack</h5>
                   <p class="card-text">HTML5, CSS3, Bootstrap</p>
@@ -235,7 +235,7 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <div class="card">
-              <img src="/imagenes/desktop/adivinaElNumero.jpeg" class="card-img-top" alt="...">
+              <img src="./imagenes/desktop/adivinaElNumero.jpeg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Juego: Adivina el número</h5>
                 <p class="card-text">HTML5, CSS3, javaScript</p>
@@ -245,7 +245,7 @@
           </div>
           <div class="carousel-item">
             <div class="card">
-              <img src="/imagenes/desktop/ecommerce.jpeg" class="card-img-top" alt="...">
+              <img src="./imagenes/desktop/ecommerce.jpeg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Ecommerce Mr. Snack</h5>
                 <p class="card-text">HTML5, CSS3, javaScript</p>
@@ -255,7 +255,7 @@
           </div>
           <div class="carousel-item">
             <div class="card">
-              <img src="/imagenes/desktop/web-mr-snack.jpeg" class="card-img-top" alt="...">
+              <img src="./imagenes/desktop/web-mr-snack.jpeg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Web Mr. Snack</h5>
                 <p class="card-text">HTML5, CSS3, Bootstrap</p>
