--- a/secciones/webMrSnack.html
+++ b/secciones/webMrSnack.html
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <header>
+    <header class="header-pages">
       <div class="header-nombre-portfolio">
         <a href="../index.html"><p>Daniel Vergaray</p></a>
       </div>
@@ -21,24 +21,52 @@
         <a href="../index.html"><i class="fa-solid fa-house"></i></a>
       </div>
     </header>
-    <section class="portfolio-container-paginas">
-      <h3>Web Mr Snack</h3>
-      <p>
-        Este proyecto realizado para un emprendimiento de snacks. Fue llevado a
-        cabo usando Html5 y Css3, ademas se implementaron estategias SEO,
-        Bootstrap y Sass, se realizaron versiones desktop y mobile.
-      </p>
-      <div>
-        <img src="../imagenes/web-mr-snack.jpeg" alt="web-mr-snack" />
-      </div>
-      <div class="btn-visitar-sitio">
-        <a href="https://danielvergaray.github.io/pagina-web-mrSnack/"
-          ><button>Visitar sitio</button>
-        </a>
-        <a href="https://github.com/danielvergaray/pagina-web-mrSnack"
-          ><button>Ver repositorio</button>
-        </a>
-      </div>
+    <section class="todo-el-contenido">
+      <section class="portfolio-container-paginas">
+        <h3>Web Mr. Snack</h3>
+        <div class="proyectos-descripcion">
+          <p>
+            Este proyecto realizado para un emprendimiento de snacks. Fue
+            llevado a cabo usando Html5 y Css3, ademas se implementaron
+            estategias SEO, Bootstrap y Sass, se realizaron versiones desktop y
+            mobile.
+          </p>
+          <div>
+            <img
+              class="img-rectangular"
+              src="../imagenes/desktop/web-mr-snack.jpeg"
+              alt="web-mr-snack"
+            />
+          </div>
+        </div>
+        <div class="btn-visitar-sitio">
+          <a href="https://danielvergaray.github.io/pagina-web-mrSnack/"
+            ><button>Visitar sitio</button>
+          </a>
+          <a href="https://github.com/danielvergaray/pagina-web-mrSnack"
+            ><button>Ver repositorio</button>
+          </a>
+          <a class="btn-regresar" href="../index.html"
+            ><button>Regresar</button>
+          </a>
+        </div>
+      </section>
+      <section id="contactoId" class="contacto-container">
+        <h2>Contacto</h2>
+        <div class="redes">
+          <a href="https://www.linkedin.com/in/daniel-vergaray-b2b97a261/"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
+          <a
+            href="https://github.com/danielvergaray?tab=repositories&q=&type=public&language=&sort="
+            ><i class="fa-brands fa-square-github"></i
+          ></a>
+          <a href="https://wa.me/51950011434"
+            ><i class="fa-brands fa-square-whatsapp"></i
+          ></a>
+          <p>danielvergarayescobar@gmail.com</p>
+        </div>
+      </section>
     </section>
   </body>
 </html>
