correccion tamaño imagenes mobile

--- a/secciones/adivinaNumero.html
+++ b/secciones/adivinaNumero.html
@@ -44,7 +44,16 @@
             javaScript.
           </p>
           <div>
-            <img src="../imagenes/desktop/adivina.jpeg" alt="web-mr-snack" />
+            <img
+              class="img-mobile"
+              src="../imagenes/adivinaElNumero.jpeg"
+              alt="web-mr-snack"
+            />
+            <img
+              class="img-desktop"
+              src="../imagenes/desktop/adivinaElNumero.jpeg"
+              alt="web-mr-snack"
+            />
           </div>
         </div>
         <div class="btn-visitar-sitio">
