--- a/secciones/ecommerceMrSnack.html
+++ b/secciones/ecommerceMrSnack.html
@@ -33,7 +33,16 @@
             versiones desktop y mobile.
           </p>
           <div>
-            <img class="img-rectangular" src="../imagenes/desktop/ecommerce.jpeg" alt="web-mr-snack" />
+            <img
+              class="img-mobile"
+              src="../imagenes/ecommerce.jpeg"
+              alt="web-mr-snack"
+            />
+            <img
+              class="img-desktop"
+              src="../imagenes/desktop/ecommerce.jpeg"
+              alt="web-mr-snack"
+            />
           </div>
         </div>
         <div class="btn-visitar-sitio">
