--- a/secciones/pigGame.html
+++ b/secciones/pigGame.html
@@ -32,7 +32,7 @@
           </p>
           <div>
             <img
-              class="img-rectangular"
+              class="img-desktop"
               src="../imagenes/desktop/pigGame.jpg"
               alt="web-mr-snack"
             />
