--- a/secciones/webMrSnack.html
+++ b/secciones/webMrSnack.html
@@ -33,7 +33,12 @@
           </p>
           <div>
             <img
-              class="img-rectangular"
+              class="img-mobile"
+              src="../imagenes/web-mr-snack.jpeg"
+              alt="web-mr-snack"
+            />
+            <img
+              class="img-desktop"
               src="../imagenes/desktop/web-mr-snack.jpeg"
               alt="web-mr-snack"
             />
