Se cambia el diseño de la web

--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
 </head>
 
 <body>
-  <header>
-    <div class="header-nombre-portfolio">
+  <header class="header-background">
+    <!-- <div class="header-nombre-portfolio">
       <a href="index.html">
         <p>Daniel Vergaray</p>
       </a>
-    </div>
+    </div> -->
+
     <div class="header-info-portfolio">
       <ul>
         <li>Sobre mi</li>
@@ -34,6 +35,17 @@
     <div class="header-menuHamburguesa-container" id="menuHamburguesaBtn">
       <i class="fa-solid fa-bars"></i>
     </div>
+    <div class="header-container-fotoTitulo">
+      <div class="header-background-foto">
+        <img class="header-foto" src="./imagenes/yo-cv-modified.png" alt="foto-de-perfil" />
+      </div>
+      <div class="header-titulos">
+        <h1>Daniel Vergaray</h1>
+        <h2>Frontend Developer jr.</h2>
+      </div>
+    </div>
+
+
   </header>
 
   <div class="header-info-mobile" id="menuDesplegable">
@@ -43,12 +55,12 @@
   <section id="todoElContenido" class="todo-el-contenido">
     <main>
       <section class="main-principal">
-        <div class="main-titulo-contenedor">
+        <!-- <div class="main-titulo-contenedor">
           <h1>
             ¡Hola! Bienvenid@ a mi portfolio, soy Daniel,<br /> Frontend
             Developer Jr.
           </h1>
-        </div>
+        </div> -->
 
       </section>
 
@@ -82,7 +94,7 @@
           programación porque jamás es tarde para volver a empezar.
         </p>
 
-        <p data-aos="fade-up" >
+        <p data-aos="fade-up">
           A nivel profesional, como ingeniero civil he tenido experiencia en
           coordinación de proyectos, manejo de personal y trabajo en equipo.
           Experiencias que me han ayudado a mejorar habilidades blandas como
@@ -98,11 +110,11 @@
 
 
       <section class="estudios" id="estudiosId">
-        <h2 class="animate__animated animate__fadeIn" >Estudios</h2>
-        <p data-aos="fade-up" class="primer-parrafo-estudios" >
+        <h2 class="animate__animated animate__fadeIn">Estudios</h2>
+        <p data-aos="fade-up" class="primer-parrafo-estudios">
           Soy una persona trabajadora y dedicada, considero que más importante
           que el talento es la dedicación y el constante aprendizaje.</p><br>
-        <p >Por ende, he llevado varios cursos y especializaciones, incluidos varios cursos de idiomas, por lo cual puedo
+        <p>Por ende, he llevado varios cursos y especializaciones, incluidos varios cursos de idiomas, por lo cual puedo
           desempeñarme en mas de un idiomas.</p><br>
         <p>Te cuento cuales son los cursos que he tomado en esta etapa.</p>
 
@@ -119,7 +131,7 @@
               Bootstrap, entre otros.
             </p>
 
-            <li ><i class="fa-solid fa-check"></i>javaScript</li>
+            <li><i class="fa-solid fa-check"></i>javaScript</li>
             <p class="titulo-instituto">CoderHouse</p>
             <p>08 semanas en donde se desarrollaron lógica de javaScript.</p>
 
@@ -131,7 +143,7 @@
             <p class="titulo-instituto">CoderHouse</p>
             <p>Proxímamente.</p>
 
-            <li ><i class="fa-solid fa-check"></i>Vue js</li>
+            <li><i class="fa-solid fa-check"></i>Vue js</li>
             <p class="titulo-instituto">Udemy</p>
             <p>Proxímamente.</p>
           </ul>
@@ -204,11 +216,19 @@
                 </div>
               </div>
               <div class="card">
-                <img src="#" class="card-img-top" alt="...">
+                <img src="./imagenes/desktop/react-gameStage.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Ecommerce GameStation</h5>
-                  <p class="card-text">HTML5, CSS3, Bootstrap, javaScript, React</p>
-                  <a href="#" class="btn btn-primary">Ver más</a>
+                  <h5 class="card-title">Ecommerce GameStage</h5>
+                  <p class="card-text">React, API's</p>
+                  <a href="./secciones/react-ecommerce.html" class="btn btn-primary">Ver más</a>
+                </div>
+              </div>
+              <div class="card">
+                <img src="./imagenes/desktop/wp-blog.jpeg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Blog de viajes/ecommerce</h5>
+                  <p class="card-text">WordPress</p>
+                  <a href="./secciones/wp-ecommerce.html" class="btn btn-primary">Ver más</a>
                 </div>
               </div>
 
@@ -287,7 +307,7 @@
 
 
 
-    
+
     </div>
 
     <section id="contactoId" class="contacto-container">
