--- a/secciones/react-ecommerce.html
+++ b/secciones/react-ecommerce.html
@@ -7,7 +7,7 @@
       src="https://kit.fontawesome.com/15199fa674.js"
       crossorigin="anonymous"
     ></script>
-    <title>Ecommerce Mr. Snack</title>
+    <title>Ecommerce gameStage</title>
     <link rel="stylesheet" href="../css/style.css" />
   </head>
 
@@ -23,34 +23,35 @@
     </header>
     <section class="todo-el-contenido">
       <section class="portfolio-container-paginas">
-        <h3>Ecommerce Mr. Snack</h3>
+        <h3>Ecommerce GameStage</h3>
         <div class="proyectos-descripcion">
           <p>
-            Este proyecto consiste en un Ecommerce creado para el emprendimiento
-            Mr. Snack. Ha sido realizado utilizando javaScript, creando los
+            Este proyecto consiste en un Ecommerce creado como una simulación de una
+            tienda de videojuegos. Ha sido realizado utilizando React, creando los
             productos del emprendimiento de manera dinamica pudiendo filtrar los
-            productos por categoria y buscarlos por su nombre, se realizaron
+            productos por categoria y buscarlos por su nombre, los productos
+            fueron almacenados en una base de datos externa (API), se realizaron
             versiones desktop y mobile.
           </p>
           <div>
             <img
               class="img-mobile"
-              src="../imagenes/ecommerce.jpeg"
+              src="../imagenes/react-gameStage-mobile.jpeg"
               alt="web-mr-snack"
             />
             <img
               class="img-desktop"
-              src="../imagenes/desktop/ecommerce.jpeg"
-              alt="web-mr-snack"
+              src="../imagenes/desktop/react-gameStage.jpeg"
+              alt="web-gameStage"
             />
           </div>
         </div>
         <div class="btn-visitar-sitio">
           <a
-            href="https://danielvergaray.github.io/entregaFinal_ecommerce/index.html"
+            href="https://6534641876928a0008007ee9--ephemeral-taffy-ada997.netlify.app/"
             ><button>Visitar sitio</button>
           </a>
-          <a href="https://github.com/danielvergaray/entregaFinal_ecommerce"
+          <a href="https://github.com/danielvergaray/react_ecommerce"
             ><button>Ver repositorio</button>
           </a>
           <a class="btn-regresar" href="../index.html"
