--- a/secciones/wp-ecommerce.html
+++ b/secciones/wp-ecommerce.html
@@ -7,7 +7,7 @@
       src="https://kit.fontawesome.com/15199fa674.js"
       crossorigin="anonymous"
     ></script>
-    <title>Ecommerce Mr. Snack</title>
+    <title>Los viajes de Daniel</title>
     <link rel="stylesheet" href="../css/style.css" />
   </head>
 
@@ -23,35 +23,30 @@
     </header>
     <section class="todo-el-contenido">
       <section class="portfolio-container-paginas">
-        <h3>Ecommerce Mr. Snack</h3>
+        <h3>Los viajes de Daniel</h3>
         <div class="proyectos-descripcion">
           <p>
-            Este proyecto consiste en un Ecommerce creado para el emprendimiento
-            Mr. Snack. Ha sido realizado utilizando javaScript, creando los
-            productos del emprendimiento de manera dinamica pudiendo filtrar los
-            productos por categoria y buscarlos por su nombre, se realizaron
-            versiones desktop y mobile.
+            Este proyecto consiste en un blog de viajes, incluyendo tienda virtual,
+            se ha realizado usando WordPress, plugings, elementor,
+            se realizaron versiones desktop y mobile.
           </p>
           <div>
             <img
               class="img-mobile"
-              src="../imagenes/ecommerce.jpeg"
+              src="../imagenes/wp-blog-mobile.jpeg"
               alt="web-mr-snack"
             />
             <img
               class="img-desktop"
-              src="../imagenes/desktop/ecommerce.jpeg"
+              src="../imagenes/desktop/wp-blog.jpeg"
               alt="web-mr-snack"
             />
           </div>
         </div>
         <div class="btn-visitar-sitio">
           <a
-            href="https://danielvergaray.github.io/entregaFinal_ecommerce/index.html"
+            href="https://dev-elviajededaniel.pantheonsite.io/"
             ><button>Visitar sitio</button>
-          </a>
-          <a href="https://github.com/danielvergaray/entregaFinal_ecommerce"
-            ><button>Ver repositorio</button>
           </a>
           <a class="btn-regresar" href="../index.html"
             ><button>Regresar</button>
