trabajo en la primera pagina

--- a/index.html
+++ b/index.html
@@ -16,26 +16,23 @@
 
 <body>
   <header class="header-background">
-    <!-- <div class="header-nombre-portfolio">
-      <a href="index.html">
-        <p>Daniel Vergaray</p>
-      </a>
-    </div> -->
 
-    <div class="header-info-portfolio">
-      <a class="header-logo" href="">Logo</a>
-      <ul>
-        <!-- <li>Sobre mi</li> -->
-        <li><a href="#estudiosId">Estudios</a></li>
-        <li><a href="#estudiosId">Idiomas</a></li>
-        <li><a href="#portfolioId">Portfolio</a></li>
-        <li><a href="#contactoId">Contacto</a></li>
-      </ul>
+    <div class="header-desktop-background">
+      <div class="header-info-portfolio">
+        <!-- <a class="header-logo" href="">Logo</a> -->
+        <ul>
+          <!-- <li>Sobre mi</li> -->
+          <li><a href="#sobreMi">Sobre mí</a></li>
+          <li><a href="#btnIdiomas">Estudios</a></li>
+          <li><a href="#portfolioId">Portfolio</a></li>
+          <li><a href="#contactoId">Contacto</a></li>
+        </ul>
+      </div>
+      <div class="header-seccionVacia">
+        
+      </div>
     </div>
 
-    <div class="header-menuHamburguesa-container" id="menuHamburguesaBtn">
-      <i class="fa-solid fa-bars"></i>
-    </div>
     <div class="header-container-fotoTitulo">
       <div class="header-background-foto">
         <img class="header-foto" src="./imagenes/yo-cv-modified.png" alt="foto-de-perfil" />
@@ -46,6 +43,9 @@
       </div>
     </div>
 
+    <div class="header-menuHamburguesa-container" id="menuHamburguesaBtn">
+      <i class="fa-solid fa-bars"></i>
+    </div>
 
   </header>
 
@@ -101,7 +101,7 @@
 
     </section>
 
-   
+
     <section class="estudios-especializaciones">
       <div class="btnMenu-container">
         <button class="btn-seleccionado" id="btnCursos">Cursos</button>
