Se ha mejorado aspecto visual mobile y desktop

--- a/index.html
+++ b/index.html
@@ -43,23 +43,23 @@
       </div>
     </div>
 
-    <div class="header-menuHamburguesa-container" id="menuHamburguesaBtn">
+    <!-- <div class="header-menuHamburguesa-container" id="menuHamburguesaBtn">
       <i class="fa-solid fa-bars"></i>
-    </div>
+    </div> -->
 
   </header>
 
-  <div class="header-info-mobile" id="menuDesplegable">
+  <!-- <div class="header-info-mobile" id="menuDesplegable">
     <ul id="menuHamburguesaId"></ul>
-  </div>
+  </div> -->
 
   <section id="todoElContenido" class="todo-el-contenido">
-    <main>
+    <!-- <main>
       <section class="main-principal">
 
       </section>
 
-    </main>
+    </main> -->
     <section class="sobreMi-container">
       <div class="seccion-fotoSobreMi">
 
@@ -116,8 +116,8 @@
 
           <div class="card-iconos" id="cardIconos">
             <i class="fa-brands fa-html5"></i>
-            <i class="fa-brands fa-css3-alt"></i>
-            <i class="fa-brands fa-bootstrap"></i>
+            <!-- <i class="fa-brands fa-css3-alt"></i>
+            <i class="fa-brands fa-bootstrap"></i> -->
           </div>
 
           <div class="card-body">
