trabajando en el js para que aparezca el popUp de cada proyecto, hay un error, no quiere aparecer el popUp de los ultimos 2 proyectos

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </section>
 
     </main> -->
-    <section class="sobreMi-container">
+    <section id="sobreMiId" class="sobreMi-container">
       <div class="seccion-fotoSobreMi">
 
         <div class="main-foto" id="sobreMi"> <!-- Para ir desde el navbar  -->
@@ -102,7 +102,7 @@
     </section>
 
 
-    <section class="estudios-especializaciones">
+    <section id="estudiosId" class="estudios-especializaciones">
       <div class="btnMenu-container">
         <button class="btn-seleccionado" id="btnCursos">Cursos</button>
         <button id="btnIdiomas">Idiomas</button>
@@ -239,12 +239,7 @@
 
       </div>
 
-
-
-
     </section>
-
-    
 
     <section class="portfolio-container-desktop" id="portfolioId">
       <h2 class="animate__animated animate__fadeIn">Portfolio</h2>
@@ -264,7 +259,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Juego: Adivina el número</h5>
                   <p class="card-text">HTML5, CSS3, javaScript</p>
-                  <button href="#" id="btnVerMasAdivina" class="btn btn-primary">Ver más</button>
+                  <button href="#" id="btnVerMasAdivina" class="btn btn-primary tu-clase-de-botones">Ver más</button>
                 </div>
               </div>
               <div class="card">
@@ -272,7 +267,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Ecommerce Mr. Snack</h5>
                   <p class="card-text">HTML5, CSS3, javaScript</p>
-                  <a href="./secciones/ecommerceMrSnack.html" class="btn btn-primary">Ver más</a>
+                  <button href="#" id="btnVerMasMrSnackJs" class="btn btn-primary tu-clase-de-botones">Ver más</button>
                 </div>
               </div>
               <div class="card">
@@ -280,7 +275,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Juego: Pig Game</h5>
                   <p class="card-text">HTML5, CSS3, javaScript</p>
-                  <a href="./secciones/pigGame.html" class="btn btn-primary">Ver más</a>
+                  <button href="#" id="btnVerMasPig" class="btn btn-primary tu-clase-de-botones">Ver más</button>
                 </div>
               </div>
             </div>
@@ -292,7 +287,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Web Mr. Snack</h5>
                   <p class="card-text">HTML5, CSS3, Bootstrap</p>
-                  <a href="./secciones/webMrSnack.html" class="btn btn-primary">Ver más</a>
+                  <button href="#" id="btnVerMasMrSnack" class="btn btn-primary tu-clase-de-botones">Ver más</button>
                 </div>
               </div>
               <div class="card">
@@ -300,7 +295,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Ecommerce GameStage</h5>
                   <p class="card-text">React, API's</p>
-                  <a href="./secciones/react-ecommerce.html" class="btn btn-primary">Ver más</a>
+                  <button href="#" id="btnVerMasReact" class="btn btn-primary tu-clase-de-botones">Ver más</button>
                 </div>
               </div>
               <div class="card">
@@ -308,7 +303,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Blog de viajes/ecommerce</h5>
                   <p class="card-text">WordPress</p>
-                  <a href="./secciones/wp-ecommerce.html" class="btn btn-primary">Ver más</a>
+                  <button href="#" id="btnVerMasWp" class="btn btn-primary tu-clase-de-botones">Ver más</button>
                 </div>
               </div>
 
